clusters/home/hajimari/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hajimari-dashboard
  namespace: hajimari
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hajimari-release
                port:
                  number: 3000
  tls:
    - hosts:
        - dashboard.homelab
      secretName: wildcard-homelab-tls
